authorization-server-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-server-service
spec:
  type: ClusterIP
  selector:
    app: auth-server
  ports:
    - port: 8921
      targetPort: auth-port
      name: auth-server-service-port
      protocol: TCP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-server
  template:
    metadata:
      name: auth-server-pod
      labels:
        app: auth-server
    spec:
      nodeName: control-plane
      containers:
        - name: auth-server-container
          image: aprijalghiyas/herbalchem-authorization-server:1.3
          imagePullPolicy: Always
          ports:
            - containerPort: 8921
              name: auth-port
          resources:
            limits:
              memory: 256Mi
