chemical-physical-property-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: chem-phys-prop-service
spec:
  type: ClusterIP
  selector:
    app: chem-phys-prop
  ports:
    - port: 80
      targetPort: cpp-port
      name: chem-phys-prop-service-port
      protocol: TCP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: chem-phys-prop-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chem-phys-prop
  template:
    metadata:
      name: chem-phys-prop-pod
      labels:
        app: chem-phys-prop
    spec:
      nodeName: control-plane
      containers:
        - name: chem-phys-prop-container
          image: aprijalghiyas/herbalchem-chemical-physical-property-service:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: cpp-port
