client-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  type: NodePort
  selector:
    app: client
  ports:
    - port: 80
      name: client-service-port
      targetPort: client-port
      protocol: TC

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      name: client-pod
      labels:
        app: client
    spec:
      nodeName: spring-boot-microservices
      containers:
        - name: client-container
          image: aprijalghiyas/client:1.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: client-port
