compound-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: compound-service
spec:
  type: ClusterIP
  selector:
    app: compound
  ports:
    - port: 80
      targetPort: compound-port
      name: compound-service-port
      protocol: TCP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: compound-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: compound
  template:
    metadata:
      name: compound-pod
      labels:
        app: compound
    spec:
      nodeName: control-plane
      containers:
        - name: compound-container
          image: aprijalghiyas/herbalchem-compound-service:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: compound-port
