compound-file-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: compound-file-service
spec:
  type: ClusterIP
  selector:
    app: compound-file
  ports:
    - port: 80
      targetPort: comp-file-port
      name: compound-file-service-port
      protocol: TCP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: compound-file-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: compound-file
  template:
    metadata:
      name: compound-file-pod
      labels:
        app: compound-file
    spec:
      nodeName: control-plane
      containers:
        - name: compound-file-container
          image: aprijalghiyas/herbalchem-compound-file-service:1.2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: comp-file-port
          volumeMounts:
            - mountPath: /structure
              name: compound-file-storage
      volumes:
        - name: compound-file-storage
          persistentVolumeClaim:
            claimName: compound-file-pvc
