elasticsearch-deployment.yaml

apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-service
spec:
  type: ClusterIP
  selector:
    app: elasticsearch
  ports:
    - port: 80
      targetPort: es-port
      name: elasticsearch-service-port
      protocol: TCP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      name: elasticsearch-pod
      labels:
        app: elasticsearch
    spec:
      nodeName: control-plane
      containers:
        - name: elasticsearch-container
          image: bitnami/elasticsearch:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9200
              name: es-port
          volumeMounts:
            - mountPath: /bitnami/elasticsearch/data
              name: elasticsearch-data-storage
            - mountPath: /opt/bitnami/elasticsearch/config/my_elasticsearch.yml
              subPath: my_elasticsearch.yml
              name: elasticsearch-config
      volumes:
        - name: elasticsearch-data-storage
          persistentVolumeClaim:
            claimName: elasticsearch-pvc
        - name: elasticsearch-config
          configMap:
            name: elasticsearch-configmap
