frontend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: frontend-port
      name: frontend-service-port
      protocol: TCP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend-pod
      labels:
        app: frontend
    spec:
      nodeName: control-plane
      containers:
        - name: frontend-container
          image: aprijalghiyas/herbalchem-frontend:1.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: frontend-port
