gateway-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  type: ClusterIP
  selector:
    app: gateway
  ports:
    - port: 80
      targetPort: gateway-port
      name: gateway-service-port
      protocol: TCP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      name: gateway-pod
      labels:
        app: gateway
    spec:
      nodeName: control-plane
      containers:
        - name: gateway-container
          image: aprijalghiyas/herbalchem-gateway:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8443
              name: gateway-port
