kafka-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
spec:
  type: ClusterIP
  selector:
    app: zookeeper
  ports:
    - port: 9092
      targetPort: kafka-port
      protocol: TCP
      name: kafka-service-port

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      name: kafka-pod
      labels:
        app: kafka
    spec:
      nodeName: spring-boot-microservices
      containers:
        - name: kafka-container
          image: confluentinc/cp-kafka:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9092
              name: kafka-port
