organism-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: organism-service
spec:
  type: ClusterIP
  selector:
    app: organism
  ports:
    - port: 80
      targetPort: organism-port
      name: organism-service-port
      protocol: TCP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: organism-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: organism
  template:
    metadata:
      name: organism-pod
      labels:
        app: organism
    spec:
      nodeName: control-plane
      containers:
        - name: organism-container
          image: aprijalghiyas/herbalchem-organism-service:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: organism-port
