phpmyadmin-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
spec:
  type: NodePort
  selector:
    app: phpmyadmin
  ports:
    - port: 80
      targetPort: phpmyadmin-port
      protocol: TCP
      name: phpmyadmin-service-port

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      name: phpmyadmin-pod
      labels:
        app: phpmyadmin
    spec:
      nodeName: k8s-control-plane
      containers:
        - name: phpmyadmin-container
          image: phpmyadmin:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: phpmyadmin-port
