structure-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: structure-service
spec:
  type: ClusterIP
  selector:
    app: structure
  ports:
    - port: 80
      targetPort: structure-port
      name: structure-service-port
      protocol: TCP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: structure-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: structure
  template:
    metadata:
      name: structure-pod
      labels:
        app: structure
    spec:
      nodeName: control-plane
      containers:
        - name: structure-container
          image: aprijalghiyas/herbalchem-structure-service:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: structure-port
