zookeeper-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-service
spec:
  type: ClusterIP
  selector:
    app: zookeeper
  ports:
    - port: 80
      targetPort: zookeeper-port
      protocol: TCP
      name: zookeeper-service-port

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      name: zookeeper-pod
      labels:
        app: zookeeper
    spec:
      nodeName: control-plane
      containers:
        - name: zookeeper-container
          image: bitnami/zookeeper:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 2181
              name: zookeeper-port
          volumeMounts:
            - mountPath: /bitnami/zookeeper
              name: zookeeper-persistent-storage
      volumes:
        - name: zookeeper-persistent-storage
          persistentVolumeClaim:
            claimName: zookeeper-pvc
