mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  type: NodePort
  selector:
    app: mysql
  ports:
    - port: 80
      targetPort: mysql-port
      protocol: TCP
      name: mysql-service-port

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      name: mysql-pod
      labels:
        app: mysql
    spec:
      nodeName: kubernetes-worker-node-1
      containers:
        - name: mysql-container
          image: mysql:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3306
              name: mysql-port
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-persistent-storage
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pvc

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: ghiyas.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: mysql-service
                port:
                  number: 80
