nginx-ingress-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: services-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: phpmyadmin.herbalchem.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: phpmyadmin-service
                port:
                  number: 80
    - host: herbalchem.com
      http:
        paths:
          - path: /config-server
            pathType: Prefix
            backend:
              service:
                name: cf-server-service
                port:
                  number: 80
          - path: /authorization-server
            pathType: Prefix
            backend:
              service:
                name: auth-server-service
                port:
                  number: 8921
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 80
